# music-tools

./: .gitignore  CLAUDE.md  LICENSE  README.md  TUI_DESIGN.md  main.py  mock_data.py  netease_api.py  pyproject.toml  pytest.ini  wyy-music.py
src/music_tools/: __init__.py  config.py  downloader.py  lyrics.py  main.py
src/music_tools/api/: netease.py
src/music_tools/player/: player.py
src/music_tools/playlist/: manager.py
src/music_tools/tui/: actions.py  app.css  app.py
src/music_tools/tui/screens/: add_to_playlist.py  help.py  playlist.py  search.py
tests/: test_local_library.py  test_netease_api.py  test_player.py  test_playlist_manager.py  test_tui_app.py
