[project]
name = "music-tools"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "mutagen>=1.47.0",
    "requests>=2.32.4",
    "rich",
]

[project.scripts]
music-tools = "music_tools.main:main"

